[footer] dynamic year in copyright

--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@ make air</pre>
                 backend rendering service. By using this bot, your Mermaid diagram syntax is sent to their servers to
                 generate the final image output.
             </p>
-            &copy; 2024 MerGram Project. Distributed under Apache License 2.0.
+            &copy; <span id="current-year"></span> MerGram Project. Distributed under Apache License 2.0.
         </div>
     </footer>
 
